# LOD-terrain-renderer-thesis

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: FindGLSLang.cmake
heightmaps/: N42E013.hgt
shaders/: CMakeLists.txt  common.h  common_template.h  simple_shader.frag  simple_shader.mesh  simple_shader.task
src/: CMakeLists.txt  main.cpp  tr_appconfig.cpp  tr_appconfig.hpp  tr_camera.cpp  tr_camera.hpp  tr_descriptorbundle.hpp  tr_guihandler.cpp  tr_guihandler.h  tr_heightmap.cpp  tr_heightmap.hpp  tr_logger.cpp  tr_logger.hpp  tr_mesh.cpp  tr_mesh.hpp  tr_renderer.cpp  tr_renderer.hpp  tr_scenedata.cpp  tr_scenedata.hpp  tr_shadercompiler.cpp  tr_shadercompiler.hpp  tr_terrain_handler.cpp  tr_terrain_handler.hpp  tr_texture.cpp  tr_texture.h  tr_window.cpp  tr_window.hpp  vk_ext_mesh_shader.h
